[package]
name = "randsym"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Generates unique identifiers for macros"
repository = "https://github.com/DexterHill0/randsym"
keywords = ["macros"]
categories = ["development-tools"]
authors = ["Dexter Hill <@DexterHill0>"]

[lib]
proc-macro = true

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng", 
]